# road-vision-app

./: .gitignore  LICENSE  README.md  TODO.txt  convert.py  convertToCoreML.py  export_fixed.py  inspect_models.py  main.py  main_coreml.py  main_v2.py  pyproject.toml  requirements.txt
models/: traffic_signs_detection_model.pt  zebra_segmentation_model.pt
static/: app.js  app_coreml.js  app_v2.js  index.html  info.html  people.html  upload.js
static/css/: styles.css
static/js/: app.js  info.js
