[project]
name = "road-mardec-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "python-multipart>=0.0.20",
    "ultralytics>=8.3.199",
    "uvicorn[standard]>=0.35.0",
]
